--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^2.4.2",
     "next": "^9.5.3-canary.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
